hphp/test/zend/bad/ext/gd/tests/imagesetthickness_error1.php
<?php
$resource = tmpfile();

imagesetthickness('string', 5);
imagesetthickness(array(), 5);
imagesetthickness($resource, 5);
?>